--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -1749,7 +1749,16 @@ h6 {
   width: 100%;
   position: absolute;
   right: 0;
-  bottom: -50px;
+  bottom: -60px;
+}
+
+@media (max-width:1200px){
+  .contact-img-bx img {
+    width: 100%;
+    position: absolute;
+    right: 0;
+    bottom: -40px !important;
+  }
 }
 
 /* Services */
