correction in about

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20935,7 +20935,7 @@ margin: 50px 20px !important;
 .WhyMe .WhyMe-list {
   width: 100%;
   border: 1px solid white;
-  background-color: #a1afd9;
+  background-color: #ffe8c4;
   padding: 13px 30px;
   border-radius: 60px;
   color: #000;
