--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20912,6 +20912,7 @@ margin: 50px 20px !important;
 }
 .WhatIsZing .spl-list .head{
   font-size: 22px !important;
+  line-height: 45px;
 }
 
 .spl-list i{
